--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              </ul>
          </nav>
          <div class="burger-bar">
-            <i class="fas fa-bars"></i>
+            <a href="#"><i class="fas fa-bars"></i></a>
          </div>
         </div>
      </header>
