--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <img src="images/001-data.png" class="block-img" alt="computer">
                 <h4 class="block-title">Website Ui</h4>
                 <p class="block-text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                <div class="button-div"><h5 class="button-block">Read More </h5></div> 
+                <div class="button-div"><h5 class="button-block">Read More </h5>
+                </div> 
             </div>
         <div class="block">
             <img src="images/003-paint.png" class="block-img" alt="computer">
@@ -80,9 +81,9 @@
             <p class="block-text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
             <div class="button-div"><h5 class="button-block">Read More </h5></div> 
         </div>
-    <!--Second line-->
-       </div>
-       <div class="div-block1">
+    </div>
+        <!--Second line-->
+        <div class="div-block1">
         <div class="block1">
             <img src="images/005-repair.png" class="block-img" alt="computer">
             <h4 class="block-title">Mobile App Ui</h4>
@@ -96,12 +97,12 @@
         <div class="button-div"><h5 class="button-block">Read More </h5></div> 
     </div>
     <div class="block1">
-        <img src="images/Path 1595.png" class="block-img" alt="computer">
+        <img src="images/Path1595.png" class="block-img" alt="computer">
         <h4 class="block-title">Web Elements</h4>
         <p class="block-text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
         <div class="button-div"><h5 class="button-block">Read More </h5></div> 
     </div>
-
+   </div>
    </div>
      </section>
 
